--- a/index.html
+++ b/index.html
@@ -444,6 +444,41 @@
         <div class="projects-grid">
           <!-- Project 1 -->
           <div class="project-card">
+            <span class="status-badge">En proceso</span>
+            <div class="project-top">
+              <div class="folder-icon">
+                <i class="far fa-folder-open"></i>
+              </div>
+              <div class="project-links">
+                <a
+                  href="https://nbviewer.org/github/Shifu42Xd/PrediccionFutbol/blob/main/Predicci%C3%B3n%20de%20Resultados.ipynb"
+                  title="Jupyter nbviewer"
+                  target="_blank"
+                  aria-label="Jupyter nbviewer Link"
+                >
+                  <i class="si si-jupyter" style="font-size: 26px"></i>
+                </a>
+              </div>
+            </div>
+            <h3 class="project-title">
+              <a href="javascript:void(0)"
+                >Predicción de Resultados de Partidos de Fútbol</a
+              >
+            </h3>
+            <p class="project-description">
+              Proyecto en desarrollo orientado a predecir los resultados de
+              partidos de fútbol a partir de datos históricos. Se aplican
+              técnicas de análisis exploratorio, limpieza y modelado con
+              regresión para estimar variables clave como goles o puntos.
+            </p>
+            <ul class="project-tech-list">
+              <li>Python</li>
+              <li>Pandas</li>
+              <li>Jupyter Notebook</li>
+            </ul>
+          </div>
+          <!-- Project 2 -->
+          <div class="project-card">
             <div class="project-top">
               <div class="folder-icon">
                 <i class="far fa-folder-open"></i>
@@ -477,7 +512,7 @@
             </ul>
           </div>
 
-          <!-- Project 2 -->
+          <!-- Project 3 -->
           <div class="project-card">
             <div class="project-top">
               <div class="folder-icon">
@@ -513,41 +548,43 @@
             </ul>
           </div>
 
-          <!-- Project 3 -->
+          <!-- Project 4 -->
           <div class="project-card">
-            <span class="status-badge">En proceso</span>
+            <span class="status-badge">Facultad</span>
             <div class="project-top">
               <div class="folder-icon">
                 <i class="far fa-folder-open"></i>
               </div>
               <div class="project-links">
                 <a
-                  href="https://nbviewer.org/github/Shifu42Xd/PrediccionFutbol/blob/main/Predicci%C3%B3n%20de%20Resultados.ipynb"
-                  title="Jupyter nbviewer"
+                  href="https://github.com/Shifu42Xd/Gesti-nRestaurante"
                   target="_blank"
-                  aria-label="Jupyter nbviewer Link"
+                  title="GitHub"
+                  aria-label="GitHub Link"
                 >
-                  <i class="si si-jupyter" style="font-size: 26px"></i>
+                  <i class="fab fa-github"></i>
                 </a>
               </div>
             </div>
             <h3 class="project-title">
-              <a href="javascript:void(0)"
-                >Predicción de Resultados de Partidos de Fútbol</a
-              >
+              <a href="javascript:void(0)">Sistema de Gestión de Restaurante</a>
             </h3>
             <p class="project-description">
-              Proyecto en desarrollo orientado a predecir los resultados de
-              partidos de fútbol a partir de datos históricos. Se aplican
-              técnicas de análisis exploratorio, limpieza y modelado con
-              regresión para estimar variables clave como goles o puntos.
+              Este proyecto implementa un sistema completo de gestión de pedidos
+              para un restaurante, con control de usuarios (mozos y cocineros),
+              carga de pedidos, control de productos y seguimiento del estado de
+              cada ítem. El sistema permite registrar, listar, cobrar y
+              actualizar pedidos, con una estructura modular basada en Flask y
+              SQLAlchemy.
             </p>
             <ul class="project-tech-list">
               <li>Python</li>
-              <li>Pandas</li>
-              <li>Jupyter Notebook</li>
+              <li>Flask</li>
+              <li>Flask-SQLAlchemy</li>
+              <li>SQLite</li>
             </ul>
           </div>
+
         </div>
       </section>
 
