--- a/index.html
+++ b/index.html
@@ -67,13 +67,16 @@
           <a href="#skills" class="nav-link"><span>02.</span>Habilidades</a>
         </div>
         <div class="nav-item">
-          <a href="#projects" class="nav-link"><span>03.</span>Prácticas</a>
+          <a href="#education" class="nav-link"><span>03.</span>Estudios</a>
         </div>
         <div class="nav-item">
-          <a href="#contact" class="nav-link"><span>04.</span>Contacto</a>
+          <a href="#projects" class="nav-link"><span>04.</span>Prácticas</a>
+        </div>
+        <div class="nav-item">
+          <a href="#contact" class="nav-link"><span>05.</span>Contacto</a>
         </div>
         <a
-          href="pdfs/CurriculumLucianoEspejo.pdf"
+          href="pdfs/CV_Luciano_Espejo_Data_Scientist.pdf"
           target="_blank"
           rel="noopener noreferrer"
           class="resume-button"
@@ -98,25 +101,31 @@
           </a>
         </div>
         <div class="mobile-nav-item">
-          <a href="#projects" class="mobile-nav-link">
-            <span>02.</span>
-            Prácticas
-          </a>
-        </div>
-        <div class="mobile-nav-item">
           <a href="#skills" class="mobile-nav-link">
-            <span>03.</span>
+            <span>02.</span>
             Habilidades
           </a>
         </div>
         <div class="mobile-nav-item">
-          <a href="#contact" class="mobile-nav-link">
+          <a href="#education" class="mobile-nav-link">
+            <span>03.</span>
+            Estudios
+          </a>
+        </div>
+        <div class="mobile-nav-item">
+          <a href="#projects" class="mobile-nav-link">
             <span>04.</span>
+            Prácticas
+          </a>
+        </div>
+        <div class="mobile-nav-item">
+          <a href="#contact" class="mobile-nav-link">
+            <span>05.</span>
             Contacto
           </a>
         </div>
         <a
-          href="pdfs/CurriculumLucianoEspejo.pdf"
+          href="pdfs/CV_Luciano_Espejo_Data_Scientist.pdf"
           target="_blank"
           rel="noopener noreferrer"
           class="resume-button mobile-resume-button"
@@ -176,7 +185,7 @@
       <section class="hero container" id="home">
         <p class="hero-greeting">Hola, mi nombre es</p>
         <h1 class="hero-title">Luciano Espejo.</h1>
-        <h2 class="hero-subtitle">Data Scients.</h2>
+        <h2 class="hero-subtitle">Junior Data Scients.</h2>
         <p class="hero-description about-text">
           Soy un profesional entusiasta por el análisis de datos. Busco
           oportunidades para desarrollar mi carrera en el rol
@@ -313,9 +322,151 @@
         </div>
       </section>
 
+      <!-- Education -->
+      <section id="education" class="education container">
+        <h2 class="section-title"><span>03.</span> Estudios</h2>
+
+        <div class="education-timeline">
+          <!-- Licenciatura en Ciencias de la Computación -->
+          <div class="education-item">
+            <div class="education-header">
+              <div class="education-icon">
+                <i class="fas fa-brain"></i>
+              </div>
+              <div class="education-info">
+                <h3 class="education-title">
+                  Licenciatura en Ciencias de la Computación
+                </h3>
+                <div class="education-meta">
+                  Facultad de Ciencias Exactas - San Juan
+                  <span class="education-period">2020 - Presente</span>
+                </div>
+              </div>
+            </div>
+            <div class="education-details">
+              <div class="education-description">
+                <p>
+                  Formación avanzada centrada en el desarrollo de algoritmos,
+                  estructuras de datos y bases de datos con aplicación directa
+                  en ciencia de datos. Programa académico que integra teoría
+                  matemática con implementación práctica para resolver problemas
+                  complejos de análisis de información.
+                </p>
+              </div>
+              <div class="education-skills">
+                <h4>Enfoque en Ciencia de Datos:</h4>
+                <ul>
+                  <li>
+                    Diseño y análisis de algoritmos para procesamiento eficiente
+                    de datos
+                  </li>
+                  <li>
+                    Modelado matemático aplicado a problemas de optimización
+                  </li>
+                  <li>
+                    Teoría de bases de datos relacionales y no relacionales
+                  </li>
+                  <li>Fundamentos estadísticos para análisis predictivos</li>
+                  <li>Desarrollo de arquitecturas de datos escalables</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <!-- Técnico en Programación -->
+          <div class="education-item">
+            <div class="education-header">
+              <div class="education-icon">
+                <i class="fas fa-laptop-code"></i>
+              </div>
+              <div class="education-info">
+                <h3 class="education-title">Técnico en Programación</h3>
+                <div class="education-meta">
+                  Facultad de Ciencias Exactas - San Juan
+                  <span class="education-period">2020 - 2025 (Finalizado)</span>
+                </div>
+              </div>
+            </div>
+            <div class="education-details">
+              <div class="education-description">
+                <p>
+                  Programa técnico especializado en desarrollo de software con
+                  énfasis en herramientas y metodologías aplicables a ciencia de
+                  datos. Formación práctica en implementación de soluciones para
+                  limpieza, transformación y análisis de datasets complejos.
+                </p>
+              </div>
+              <div class="education-skills">
+                <h4>Enfoque en Ciencia de Datos:</h4>
+                <ul>
+                  <li>
+                    Desarrollo de pipelines de datos con Python y librerías
+                    especializadas
+                  </li>
+                  <li>
+                    Técnicas avanzadas de manipulación y transformación de datos
+                  </li>
+                  <li>
+                    Implementación de algoritmos de análisis y modelado
+                    estadístico
+                  </li>
+                  <li>Automatización de procesos ETL para flujos de datos</li>
+                  <li>
+                    Optimización de rendimiento en procesamiento de grandes
+                    volúmenes
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <!--Técnico en Reparación en Computadoras -->
+          <div class="education-item">
+            <div class="education-header">
+              <div class="education-icon">
+                <i class="fas fa-tools"></i>
+              </div>
+              <div class="education-info">
+                <h3 class="education-title">Técnico en Reparación de PC</h3>
+                <div class="education-meta">
+                  Instituto Superior Cervantes - San Juan
+                  <span class="education-period"
+                    >April 2019 - October 2019</span
+                  >
+                </div>
+              </div>
+            </div>
+            <div class="education-details">
+              <div class="education-description">
+                <p>
+                  Formación técnica centrada en el diagnóstico lógico y
+                  resolución de problemas en infraestructura computacional,
+                  garantizando la optimización de sistemas y el correcto
+                  funcionamiento del hardware.
+                </p>
+              </div>
+              <div class="education-skills">
+                <h4>Enfoque en Técnico:</h4>
+                <ul>
+                  <li>
+                    Diagnóstico avanzado de fallas en componentes de hardware y software.
+                  </li>
+                  <li>
+                    Gestión de infraestructura informática y configuración de entornos de trabajo.
+                  </li>
+                  <li>
+                    Optimización de recursos del sistema para maximizar el rendimiento.
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- Projects -->
       <section id="projects" class="projects container">
-        <h2 class="section-title"><span>03.</span> Práctica Profecional</h2>
+        <h2 class="section-title"><span>04.</span> Práctica Profecional</h2>
 
         <div class="featured-projects">
           <!-- Featured Project 1 -->
@@ -584,7 +735,6 @@
               <li>SQLite</li>
             </ul>
           </div>
-
         </div>
       </section>
 
@@ -594,7 +744,7 @@
         <div class="contact-decoration decoration-1"></div>
         <div class="contact-decoration decoration-2"></div>
 
-        <h2 class="section-title"><span>04.</span> ¿Y ahora qué?</h2>
+        <h2 class="section-title"><span>05.</span> ¿Y ahora qué?</h2>
         <h2 class="contact-title">Ponte en <span>Contacto</span></h2>
         <p class="contact-description">
           ¿Tienes una pregunta, propuesta o simplemente quieres saludar?
