--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   </head>
 
   <body>
+    <canvas id="mathCanvas"></canvas>
     <!-- Header -->
     <header class="header">
       <a href="#home" class="logo">
@@ -185,7 +186,7 @@
       <section class="hero container" id="home">
         <p class="hero-greeting">Hola, mi nombre es</p>
         <h1 class="hero-title">Luciano Espejo.</h1>
-        <h2 class="hero-subtitle">Junior Data Scients.</h2>
+        <h2 class="hero-subtitle">Junior Data Scientist.</h2>
         <p class="hero-description about-text">
           Soy un profesional entusiasta por el análisis de datos. Busco
           oportunidades para desarrollar mi carrera en el rol
@@ -893,7 +894,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <script src="js/scroll_heder.js"></script>
-
     <script src="js/contact.js"></script>
+    <script src="js/background.js"></script>
   </body>
 </html>
