--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
     <!-- Email sidebar -->
     <div class="email">
-      <a href="#contact">ismaelluchi436@gmail.com</a>
+      <a href="#contact">lucianoespejo.shifu@gmail.com</a>
     </div>
 
     <!-- Main -->
@@ -838,7 +838,7 @@
             </p>
 
             <div class="email-container">
-              <div class="email-text">ismaelluchi436@gmail.com</div>
+              <div class="email-text">lucianoespejo.shifu@gmail.com</div>
               <button class="copy-btn" id="copy-email-btn">
                 <i class="far fa-copy"></i> Copiar
               </button>
